--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,17 @@
 body{
     margin: 0 auto;
+    font-family: 'Catamaran', sans-serif;
 }
 
 header nav{
-    background-color: darkgray;
+    background-color: rgb(6, 19, 0);
     text-align: center;
     padding: 10px 0 10px 0;
 }
 
 header nav a{
     text-decoration: none;
-    color: black;
+    color: white;
     font-size: 30px;
     padding: 0px 15px 0px 15px;
 }
@@ -58,7 +59,7 @@ header nav a{
 
 .post-up{
     font-size: 30px;
-    color: rgb(73, 73, 73);
+    color: rgb(255, 255, 255);
 }
 
 .post-button{
@@ -69,6 +70,11 @@ header nav a{
     background-color: white;
     border: none;
     margin-bottom: 50px;
+}
+
+.post-button:hover{
+    color: rgb(51, 51, 51);
+    background-color: rgb(199, 199, 199);
 }
 
 
@@ -82,22 +88,65 @@ header nav a{
     border-top: yellowgreen 2px solid;
     margin: 100px auto;
     max-width: 1200px;
+    padding-bottom: 10px;
 }
 
 .post-title_{
     margin: 10px 40px 5px;
     font-size: 30px;
 }
+
 .post-text_{
     margin: 10px 10px 5px;
 }
+
 .post-author_{
     margin: 40px 0 5px;
     color: grey;
     font-size: 15px;
 }
+
 .post-created_at_{
     margin: 0px 0;
     color: grey;
     font-size: 15px;
+}
+
+.delete-button{
+    margin: 10px 0px 0px 50px;
+    width: 70px;
+    height: 30px;
+}
+
+.signin-button{
+    height: 40px; 
+    background-color: rgb(103, 255, 103); 
+    border-radius: 5px; 
+    opacity: 0.8;
+    position: relative;
+    top: 5px;
+}
+
+.signin-button:hover{
+    transition: 0.4s;
+    opacity: 1;
+}
+
+.register-button{
+    height: 40px; 
+    background-color: white; 
+    border-radius: 5px; 
+    opacity: 0.8;
+    position: relative;
+    top: 5px;
+}
+
+.register-button:hover{
+    transition: 0.4s;
+    opacity: 1;
+}
+
+.container{
+    max-width: 1400px;
+    text-align: center;
 }
